Fixed bug where images would not display/Changed image placement and spacing

--- a/css/restaurant-flora-stylesheet.css
+++ b/css/restaurant-flora-stylesheet.css
@@ -50,8 +50,8 @@ a {
 }
 div#content {
     float: left;
-    width: 460px;
-    margin: 0 20px 30px 20px;
+    width: 675px;
+    margin: 0px;
     position: relative;
     padding-bottom: 70px;
 }
